fix wrong map info

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="row justify-content-center">
           <div class="col-xl-5 col-lg-6 video-box d-flex justify-content-center align-items-stretch position-relative">
-            <a href="https://www.youtube.com/watch?v=fF6WOQ4p5ak&t=6s" class="glightbox play-btn mb-4"></a>
+            <a href="#" class="glightbox play-btn mb-4"></a>
           </div>
 
           <div
@@ -230,7 +230,7 @@
     <!-- ======= Contact Section ======= -->
     <div>
       <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.7972811399677!2d39.21314111434611!3d-6.794502968338473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c4ec96ca8dad9%3A0x5920d342072e1164!2sUbungo%20Plaza%20Limited!5e0!3m2!1sen!2stz!4v1653001872122!5m2!1sen!2stz"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.7660121373315!2d39.14324011382884!3d-6.798297395086283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c45cbded5fc97%3A0x63d18100aad2fb15!2sEAGT%20Kambi%20ya%20Waebrania%20Church!5e0!3m2!1sen!2stz!4v1656784744215!5m2!1sen!2stz"
         frameborder="0" style="border:0; width: 100%; height: 384px;" allowfullscreen></iframe>
     </div>
     <section id="contact" class="contact section-bg">
