--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <h1 class="logo"><a href="index.html">SHAAC</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <!-- <a href="index.html" class="logo"><img src="assets/img/shaacbg0.png" alt="" class="img-fluid" ></a> -->
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -63,6 +63,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
+    <img src="assets/img/shaacbg0.png" alt="" class="img-fluid" ></a>
     <div id="heroCarousel" data-bs-interval="5000" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
       <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
@@ -105,7 +106,7 @@
     </div>
   </section><!-- End Hero -->
 
-  <main id="main">
+  <main id="main">g
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -166,19 +167,19 @@
         <tr>
           <th scope="row">8:00 - 8:10</th>
           <td>Shika ya yesu</td>
-          <td>nyimbo moja</td>
+          <td>wimbo mmoja</td>
 
         </tr>
         <tr>
           <th scope="row">8:10 - 8:16</th>
           <td>Mark Joseph</td>
-          <td>nyimbo moja</td>
+          <td>wimbo mmoja</td>6
 
         </tr>
         <tr>
           <th scope="row">8:16 - 8:22</th>
           <td>Mtindo Elias</td>
-          <td>nyimbo moja</td>
+          <td>wimbo mmoja</td>
         </tr>
         <tr>
           <th scope="row">8:30 - 9:00</th>
@@ -193,7 +194,7 @@
         <tr>
           <th scope="row">9:30 - 10:00</th>
            <td>Shika ya yesu</td>
-          <td>nyimbo moja</td>
+          <td>wimbo mmoja</td>
         </tr>
         <tr>
           <th scope="row">10:30 - 11:00</th>
